Fix: Swagger e su endPoint di loan-service